--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   language-code="en"
 ></df-messenger>
 
-<!-- IBM Watson - SITA
+<!-- SITA
     ================================================== -->
 
 
